--- a/index.html
+++ b/index.html
@@ -15,27 +15,27 @@ rel='stylesheet' type='text/css'>
     <h1>Портфолио</h1>
     <div class="wrapper">
         <div>
-            <img class="image" src="images/1.webp" />
+            <img class="image" src="1.webp" />
             <h2>Страница презентации</h2>
             <h3>Курс «Большая переверстка»</h3>
         </div>
         <div>
-            <img class="image" src="images/2.webp" />
+            <img class="image" src="2.webp" />
             <h2>Обложка книги</h2>
             <h3>Курс «Большая переверстка»</h3>
         </div>
         <div>
-            <img class="image" src="images/3.webp" />
+            <img class="image" src="3.webp" />
             <h2>Баннер для IKEA</h2>
             <h3>Курс «Большая переверстка»</h3>
         </div>
         <div>
-            <img class="image" src="images/4.webp" />
+            <img class="image" src="4.webp" />
             <h2>Баннер для IKEA</h2>
             <h3>Курс «Большая переверстка»</h3>
         </div>
         <div>
-            <img class="image" src="images/5.webp" />
+            <img class="image" src="5.webp" />
             <h2>Редизайн таблицы</h2>
             <h3>Курс «Большая переверстка»</h3>
         </div>
